2002-08-08  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.5

	* configure.in: Check for in_addr_t

2002-08-06  Thorsten Kukuk  <kukuk@suse.de>

	* yppush/yppush.8.in: Fix syntax error.

2002-08-06  Thorsten Kukuk  <kukuk@suse.de>

        * lib/yp_db.c (ypdb_open): Check if map exist before allocating
        memory for extra data.

        * lib/access.c (is_valid): If map does not exist, return -2,
        not success.

2002-07-23  Thorsten Kukuk  <kukuk@suse.de>

	* ypserv/server.c (ypproc_xfr_2_svc): Print also name of the
	expected master if we refuse to transfer a map.

2002-07-02  Thorsten Kukuk  <kukuk@suse.de>

	* rpc.ypxfrd/Makefile.in (rpc_ypxfrd_LDADD): link against libyp.a
	before linking against libgdbm.

	* ypserv/Makefile.in (rpc_ypxfrd_LDADD): Likewise.
	(Reported by Todd R. Eigenschink <todd@tekinteractive.com>)

002-05-27  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.4

	* scripts/ypMakefile.in (MINUID/MINGID): increase both variables
	to 500 as defined by LSB and to be compatible with most Linux
	distributions.

	* lib/ypserv.conf.5: move from here ...
	* etc/ypserv.conf.5: ... to here. Remove mangle field description.
	* lib/Makefile.am: Remove ypserv.conf.5
	* etc/Makefile.am: Add ypserv.conf.5

2002-05-23  Martin Vidner  <mvidner@suse.cz>

	* yphelper/yphelper.c: Add -i option to getopt_long

2002-05-14  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.3

	* yppush/yppush.c (hostcmp): Get ride of this function, since it
	could remove correct slaves which have the same hostname but are
	in other domains.

	* yphelper/yphelper.c (is_master): New function, check if we are
	the master for a given map.

	* yphelper/Makefile.am (yphelper_LDADD): Link against dbm library.

2002-05-13  Thorsten Kukuk  <kukuk@suse.de>

	* configure.in: Prefer libxcrypt over libcrypt.

2002-04-26  Thorsten Kukuk  <kukuk@suse.de>

	* configure.in: Adjust for new autoconf.

	* config.guess: Deleted.
	* config.sub: Deleted.
	* acconfig.h: Deleted.
