@@ -1,3 +1,8 @@
+2002-10-02  Thorsten Kukuk  <kukuk@suse.de>
+
+	* lib/yp_db.c: Add new parameter: dont_cache. If 1, don't cache
+	the the file handle.
+
 2002-08-08  Thorsten Kukuk  <kukuk@suse.de>
 
 	* release version 2.5
